@@ -1,3 +1,9 @@
+2002-01-30  Mikhael Goikhman  <migo@homemail.com>
+
+	* configure.in:
+	a patch to config.status to generate scripts executable, may be handy;
+	added generation of utils/fvwm24_convert
+
 2002-01-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/schedule.c:
